--- a/Course_name&section.html
+++ b/Course_name&section.html
@@ -1,131 +1,120 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Classroom API Quickstart</title>
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <p>Classroom API Quickstart</p>
+const fs = require('fs');
+const readline = require('readline');
+const {google} = require('googleapis');
 
-    <!--Add buttons to initiate auth sequence and sign out-->
-    <button id="authorize_button" style="display: none;">Authorize</button>
-    <button id="signout_button" style="display: none;">Sign Out</button>
+// If modifying these scopes, delete token.json.
+const SCOPES = ["https://www.googleapis.com/auth/classroom.coursework.me https://www.googleapis.com/auth/classroom.coursework.me.readonly https://www.googleapis.com/auth/classroom.coursework.students https://www.googleapis.com/auth/classroom.coursework.students.readonly"];
+// The file token.json stores the user's access and refresh tokens, and is
+// created automatically when the authorization flow completes for the first
+// time.
+const TOKEN_PATH = 'token.json';
 
-    <pre id="content" style="white-space: pre-wrap;"></pre>
+// Load client secrets from a local file.
+fs.readFile('credentials.json', (err, content) => {
+  if (err) return console.log('Error loading client secret file:', err);
+  // Authorize a client with credentials, then call the Google Classroom API.
+  authorize(JSON.parse(content), listCourses);
+});
 
-    <script type="text/javascript">
-      // Client ID and API key from the Developer Console
-      var CLIENT_ID = '734967998939-2r7vlv8ik7iel3iuci4tf4ci02k5abe1.apps.googleusercontent.com';
-      var API_KEY = 'AIzaSyAh9wgGY6pBR87kd9_aZgsB88emMsmCZa4';
+/**
+ * Create an OAuth2 client with the given credentials, and then execute the
+ * given callback function.
+ * @param {Object} credentials The authorization client credentials.
+ * @param {function} callback The callback to call with the authorized client.
+ */
+function authorize(credentials, callback) {
+  const {client_secret, client_id, redirect_uris} = credentials.installed;
+  const oAuth2Client = new google.auth.OAuth2(
+      client_id, client_secret, redirect_uris[0]);
 
-      // Array of API discovery doc URLs for APIs used by the quickstart
-      var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/classroom/v1/rest"];
+  // Check if we have previously stored a token.
+  fs.readFile(TOKEN_PATH, (err, token) => {
+    if (err) return getNewToken(oAuth2Client, callback);
+    oAuth2Client.setCredentials(JSON.parse(token));
+    callback(oAuth2Client);
+  });
+}
 
-      // Authorization scopes required by the API; multiple scopes can be
-      // included, separated by spaces.
-      var SCOPES = "https://www.googleapis.com/auth/classroom.courses.readonly";
+/**
+ * Get and store new token after prompting for user authorization, and then
+ * execute the given callback with the authorized OAuth2 client.
+ * @param {google.auth.OAuth2} oAuth2Client The OAuth2 client to get token for.
+ * @param {getEventsCallback} callback The callback for the authorized client.
+ */
+function getNewToken(oAuth2Client, callback) {
+  const authUrl = oAuth2Client.generateAuthUrl({
+    access_type: 'offline',
+    scope: SCOPES,
+  });
+  console.log('Authorize this app by visiting this url:', authUrl);
+  const rl = readline.createInterface({
+    input: process.stdin,
+    output: process.stdout,
+  });
+  rl.question('Enter the code from that page here: ', (code) => {
+    rl.close();
+    oAuth2Client.getToken(code, (err, token) => {
+      if (err) return console.error('Error retrieving access token', err);
+      oAuth2Client.setCredentials(token);
+      // Store the token to disk for later program executions
+      fs.writeFile(TOKEN_PATH, JSON.stringify(token), (err) => {
+        if (err) return console.error(err);
+        console.log('Token stored to', TOKEN_PATH);
+      });
+      callback(oAuth2Client);
+    });
+  });
+}
 
-      var authorizeButton = document.getElementById('authorize_button');
-      var signoutButton = document.getElementById('signout_button');
+/**
+ * Lists the first 50 courses the user has access to.
+ *
+ * @param {google.auth.OAuth2} auth An authorized OAuth2 client.
+ */
+function listCourses(auth) {
+  const classroom = google.classroom({version: 'v1', auth});
+  classroom.courses.list((err, res) => {
+    if (err) return console.error('The API returned an error: ' + err);
+    const courses = res.data.courses;
+    if (courses && courses.length) {
+      console.log('Courses:');
+      courses.forEach((course) => {
+        console.log(`${course.name} - ${course.section} (${course.id})`);
+      });
+    } else {
+      console.log('No courses found.');
+    }
+  });
 
-      /**
-       *  On load, called to load the auth2 library and API client library.
-       */
-      function handleClientLoad() {
-        gapi.load('client:auth2', initClient);
-      }
+  classroom.courses.courseWork.list({"courseId": "265849904082"}, (err, res) =>{
+    if (err) return console.error('The API for courseWork.list returned an error: '+err);
+    const courseWorks=res.data.courseWork;
+    if(courseWorks && courseWorks.length) {
+      console.log('Course work for ID '+ courseId);
+      courseWorks.forEach((courseWork)=>{
+        console.log(`${courseWork.title}`);
+      });
+    } else {
+      console.log('No course work found');
+    }
+  });
+}
 
-      /**
-       *  Initializes the API client library and sets up sign-in state
-       *  listeners.
-       */
-      function initClient() {
-        gapi.client.init({
-          apiKey: API_KEY,
-          clientId: CLIENT_ID,
-          discoveryDocs: DISCOVERY_DOCS,
-          scope: SCOPES
-        }).then(function () {
-          // Listen for sign-in state changes.
-          gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
 
-          // Handle the initial sign-in state.
-          updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-          authorizeButton.onclick = handleAuthClick;
-          signoutButton.onclick = handleSignoutClick;
-        }, function(error) {
-          appendPre(JSON.stringify(error, null, 2));
-        });
-      }
-
-      /**
-       *  Called when the signed in status changes, to update the UI
-       *  appropriately. After a sign-in, the API is called.
-       */
-      function updateSigninStatus(isSignedIn) {
-        if (isSignedIn) {
-          authorizeButton.style.display = 'none';
-          signoutButton.style.display = 'block';
-          listCourses();
-        } else {
-          authorizeButton.style.display = 'block';
-          signoutButton.style.display = 'none';
-        }
-      }
-
-      /**
-       *  Sign in the user upon button click.
-       */
-      function handleAuthClick(event) {
-        gapi.auth2.getAuthInstance().signIn();
-      }
-
-      /**
-       *  Sign out the user upon button click.
-       */
-      function handleSignoutClick(event) {
-        gapi.auth2.getAuthInstance().signOut();
-      }
-
-      /**
-       * Append a pre element to the body containing the given message
-       * as its text node. Used to display the results of the API call.
-       *
-       * @param {string} message Text to be placed in pre element.
-       */
-      function appendPre(message) {
-        var pre = document.getElementById('content');
-        var textContent = document.createTextNode(message + '\n');
-        pre.appendChild(textContent);
-      }
-
-      /**
-       * Print the names of the first 10 courses the user has access to. If
-       * no courses are found an appropriate message is printed.
-       */
-      function listCourses() {
-        gapi.client.classroom.courses.list({
-          pageSize: 100
-        }).then(function(response) {
-          var courses = response.result.courses;
-          appendPre('Courses:');
-
-          if (courses.length > 0) {
-            for (i = 0; i < courses.length; i++) {
-              var course = courses[i];
-              appendPre(course.name+' - '+course.section)
-            }
-          } else {
-            appendPre('No courses found.');
-          }
-        });
-      }
-
-    </script>
-
-    <script async defer src="https://apis.google.com/js/api.js"
-      onload="this.onload=function(){};handleClientLoad()"
-      onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
-  </body>
-</html>
+/** 
+ *
+function listCouseWork(auth, courseId) {
+  const classroom = google.classroom({version: 'v1', auth});
+  classroom.courses.courseWork.list(courseId, (err, res) => {
+    if (err) return console.error('The API retuned an error in courseWork.list: '+err);
+    const courseAssignments=res.data.courseWork.courseId;
+    if(courseAssignments && courseAssignments.length) {
+      console.log('Couses for ID '+courseId+' are:');
+      courseAssignments.forEach((courseAssignment) => {
+        console.log(`${courseAssignment.name}`);
+      });
+    }else {
+      console.log('No couse assignmnets found.');
+    }
+  });
+}
